<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginPage"
    android:orientation="vertical"
    android:background="@drawable/background_1">
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/loginbanner1"
            android:layout_width="wrap_content"
            android:layout_height="100sp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/transwift"
            tools:ignore="ImageContrastCheck,ImageContrastCheck"
            android:contentDescription="@string/todo"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/enter_email_here"
            android:textColorHint="@color/orange"
            android:layout_marginLeft="10sp"
            android:layout_marginRight="10sp"
            android:layout_marginTop="100sp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#00000000"
                android:inputType="textEmailAddress"
                android:ems="10"
                android:textColor="@color/orange"
                android:textSize="25sp"
                android:autofillHints=""
                android:id="@+id/loginemail">

            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/enter_password_here"
            android:textColorHint="@color/orange"
            android:layout_marginLeft="10sp"
            android:layout_marginRight="10sp"
            android:layout_marginTop="60sp"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#00000000"
                android:inputType="textPassword"
                android:ems="10"
                android:textColor="@color/orange"
                android:textSize="25sp"
                android:autofillHints=""
                android:id="@+id/loginpassword">

            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/loginbutton"
            android:layout_width="150sp"
            android:layout_height="60sp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="60sp"
            android:background="@drawable/custom_button1"
            android:text="LOGIN"
            android:fontFamily="@font/golden_volcano"
            android:textSize="20sp"
            android:textStyle="normal"/>

        <TextView
            android:id="@+id/passreset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20sp"
            android:fontFamily="@font/rainshow"
            android:text="@string/forgot_password"
            android:textColor="#FFA726"/>
    </LinearLayout>
</ScrollView>

    <ProgressBar
        android:id="@+id/loginprogressbar"
        style="@style/TextAppearance.AppCompat.Large"
        android:layout_width="81dp"
        android:layout_height="78dp"
        android:layout_gravity="center_horizontal"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>